--- a/app/globals.css
+++ b/app/globals.css
@@ -38,6 +38,7 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  overflow: hidden;
 }
 
 
@@ -67,4 +68,17 @@ body {
 .animate-marquee {
   display: inline-block;
   animation: marquee 15s linear infinite;
+}
+
+
+.shadowx-hover {
+  transition: box-shadow 0.2s ease;
+}
+
+.shadowx-hover:hover {
+  box-shadow: 0 0 12px rgba(255, 255, 255, 0.28);
+}
+
+.white-image {
+  filter: invert(1) brightness(2);
 }
