--- a/app/globals.css
+++ b/app/globals.css
@@ -1,24 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
 @import "tailwindcss";
 
+body {
+  font-family: 'Josefin Sans', sans-serif;
+}
 
 :root {
   --background: #ffffff;
   --foreground: #171717;
 }
 
-:root {
-  --font-manrope: 'Manrope', sans-serif;
-}
-
-html{
+html {
   scroll-behavior: auto;
 }
 
 body {
-  font-family: var(--font-manrope);
-  overflow: hidden;
+  /* font-family: Manrope; */
 }
-
 
 @theme inline {
   --color-background: var(--background);
@@ -37,32 +35,30 @@ body {
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
   overflow: hidden;
 }
-
-
 
 /* oren color =>  #FB512C */
 /* gray color =>  #C0C0C0 */
 
-.text{
+.text {
   color: #d1d5db;
 }
 
-.container{
-  max-width: 1170px;
-   width: 100%;
-   margin: 0 auto;
-}
-
-.button-bg{
-  background-color: #FB512C;
+.container {
+  max-width: 1440px;
+  width: 100%;
+  margin: 0 auto;
 }
 
 @keyframes marquee {
-  0% { transform: translateX(100%); }
-  100% { transform: translateX(-100%); }
+  0% {
+    transform: translateX(100%);
+  }
+
+  100% {
+    transform: translateX(-100%);
+  }
 }
 
 .animate-marquee {
@@ -76,9 +72,93 @@ body {
 }
 
 .shadowx-hover:hover {
-  box-shadow: 0 0 12px rgba(255, 255, 255, 0.28);
+  box-shadow: 0 0 10px   rgba(255, 255, 255, 0.28);
+  /* box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px; */
 }
 
 .white-image {
   filter: invert(1) brightness(2);
+}
+
+.sun-animation {
+  animation: floatSun 6s ease-in-out infinite;
+}
+
+
+@keyframes floatSun {
+  0% {
+    transform: translateY(0px) rotate(0deg);
+    box-shadow: 0 0 40px rgba(255, 165, 0, 0.6);
+  }
+
+  25% {
+    transform: translateY(-10px) rotate(3deg);
+    box-shadow: 0 0 60px rgba(255, 140, 0, 0.8);
+  }
+
+  50% {
+    transform: translateY(0px) rotate(0deg);
+    box-shadow: 0 0 50px rgba(255, 165, 0, 0.7);
+  }
+
+  75% {
+    transform: translateY(10px) rotate(-3deg);
+    box-shadow: 0 0 60px rgba(255, 140, 0, 0.8);
+  }
+
+  100% {
+    transform: translateY(0px) rotate(0deg);
+    box-shadow: 0 0 40px rgba(255, 165, 0, 0.6);
+  }
+}
+
+
+.button-dark {
+  position: relative;
+  overflow: hidden;
+  background-color:transparent;
+  color: white;
+  border: 1px solid rgb(68, 68, 68);
+  transition: color 0.3s ease, border 0.3s ease;
+}
+
+.button-dark::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(37, 37, 37); /* your dark cyan */
+  transition: left 0.5s ease;
+  z-index: 0;
+}
+
+.button-dark:hover::before {
+  left: 0;
+}
+
+.button-dark span {
+  position: relative;
+  z-index: 1;
+}
+
+.button-dark:hover {
+  color: white;
+  border-color: gray;
+}
+
+
+@keyframes flipY {
+  0% { transform: translateX(-50%) scale3d(1,1,1) rotatex(0deg) rotatey(0deg) rotatez(0deg); }
+  20.25% { transform: translateX(-50%) scale3d(1,1,1) rotatex(0deg) rotatey(90deg) rotatez(0deg); }
+  100% { transform: translateX(-50%) scale3d(1,1,1) rotatex(0deg) rotatey(90deg) rotatez(0deg); }
+}
+
+.bg-gradient-shadow {
+  background:
+    linear-gradient(0deg, rgba(0,0,0,0) 10%, rgba(109,109,109,0.7) 50%, rgba(0,0,0,0)),
+    linear-gradient(90deg, rgba(0,0,0,0) 10%, rgba(109,109,109,0.7) 50%, rgba(0,0,0,0)),
+    linear-gradient(180deg, rgba(0,0,0,0) 10%, rgba(109,109,109,0.7) 50%, rgba(0,0,0,0)),
+    linear-gradient(270deg, rgba(0,0,0,0) 10%, rgba(109,109,109,0.7) 50%, rgba(0,0,0,0));
 }
