scroll error solved!

--- a/app/globals.css
+++ b/app/globals.css
@@ -19,7 +19,9 @@ body {
 }
 
 html {
-  scroll-behavior: auto;
+  height: 100%;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 /* @theme inline {
